Fix MSKINS-12: Internet Explorer 9 shows scrollbar on <div id=navcolumn>
git-svn-id: https://svn.apache.org/repos/asf/maven/skins/trunk/maven-classic-skin@1222959 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/css/maven-theme.css
+++ b/src/main/resources/css/maven-theme.css
@@ -65,6 +65,7 @@ div#banner {
  border-right: 1px solid #aaa;
  border-bottom: 1px solid #aaa;
  border-top: 1px solid #fff;
+ padding-bottom: 2px; /* IE-9 scrollbar-fix */
 }
 
 #navcolumn {
